--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 		meta(charset='utf-8')
 		meta(http-equiv='Content-type' content='text/html;charset=UTF-8')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
-		meta(name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no')
+		meta(name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1')
 		meta(name='apple-mobile-web-app-capable' content='yes')
 		meta(name='apple-mobile-web-app-status-bar-style' content='black')
 		meta(name='keywords' content='eps,uam,laboratorios,horario')
@@ -61,16 +61,19 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 
 			footer
 				hr
-				p ¿Dudas? ¿Problemas? Ponte en contacto&nbsp;
-					a(href="http://github.com/ManuelBlanc") conmigo
-					|.
+				p Tambien puede interesarte mi&nbsp;
+					a(href="https://github.com/ManuelBlanc/eps-dotfiles") configuración
+					|  para los laboratorios.
+					small  (¿Has encontrado un problema? ¡Ponte en contacto&nbsp;
+						a(href="http://github.com/ManuelBlanc") conmigo
+						|!
 
+			a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io')
+				img(src='img/github_ribbon.png' alt='Fork me on GitHub')
 
 		//- Codigo en el body para que cargue mas rapido el html
 		script(type='text/javascript' src='lib/jquery-2.1.3.min.js')
 		script(type='text/javascript' src='lib/d3/d3.js')
 		script(type='text/javascript' src='app.js')
 		//- Github ribbon
-		//-a(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io')
-		//-	img(style='position: fixed; top: 0; left: 0; border: 0;' src='img/github_ribbon.png' alt='Fork me on GitHub' data-canonical-src='https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png')
 
