--- a/style.less
+++ b/style.less
@@ -155,6 +155,16 @@ h1 {
 	}
 }
 
+.ribbon {
+	position: fixed;
+	top: 0;
+	left: 0;
+	border: 0;
+	opacity: 0.4;
+	transition: 0.5s opacity;
+	&:hover { opacity: 1; }
+}
+
 footer {
 	hr {
 		border: none;
@@ -163,7 +173,7 @@ footer {
 		box-sizing: content-box;
 		height: 0;
 	}
-	p {
+	p, small {
 		text-align: center;
 		margin-bottom: 0;
 	}
