--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h1 {
   opacity: 1;
 }
 footer {
-  min-height: 4em;
+  min-height: 5em;
 }
 footer hr {
   border: none;
@@ -145,4 +145,5 @@ footer p,
 footer small {
   text-align: center;
   margin-bottom: 0;
+  padding: 0 4em;
 }
