--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,11 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 		link(href='img/favicon.ico?v=1' rel='shortcut icon' type='image/x-icon')
 		link(rel='stylesheet' href='style.css')
 
+		//- Librerias
+		script(type='text/javascript' src='https://code.jquery.com/jquery-2.1.3.min.js')
+		//-link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+		//-script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+		script(type='text/javascript' src='app.js')
 
 		<!--[if lt IE 9]>
 		script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
@@ -62,14 +67,10 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 			footer
 				hr
 				p ¿Ya estas en un laboratorio? Tambien puede interesarte mi&nbsp;
-					a(href="https://github.com/ManuelBlanc/eps-dotfiles") configuración
+					a(href='https://github.com/ManuelBlanc/eps-dotfiles') configuración
 					|  para los laboratorios.
 
-		a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io')
-			img(src='img/github_ribbon.png' alt='Fork me on GitHub')
-
-		//- Codigo en el body para que cargue mas rapido el html
-		script(type='text/javascript' src='lib/jquery-2.1.3.min.js')
-		script(type='text/javascript' src='app.js')
 		//- Github ribbon
+		//-a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io')
+		//-	img(src='img/github_ribbon.png' alt='Fork me on GitHub')
 
