--- a/index.jade
+++ b/index.jade
@@ -15,12 +15,14 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 		meta(name='author' content='MBlanc')
 
 		link(href='img/favicon.ico?v=1' rel='shortcut icon' type='image/x-icon')
-		link(rel='stylesheet' href='style.css')
 
 		//- Librerias
-		script(type='text/javascript' src='https://code.jquery.com/jquery-2.1.3.min.js')
-		//-link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
-		//-script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+		script(type='text/javascript' src='//code.jquery.com/jquery-2.1.3.min.js')
+		link(rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
+		script(type='text/javascript' src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+
+		//- User
+		link(rel='stylesheet' href='style.css')
 		script(type='text/javascript' src='app.js')
 
 		<!--[if lt IE 9]>
@@ -28,49 +30,48 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 		<![endif]-->
 
 	body
-		.container
-			h1 ¿Qué&nbsp;laboratorios estan&nbsp;libres?
+		.container-fluid
+			h2.text-center ¿Qué&nbsp;laboratorios estan&nbsp;libres?
 			.floorplan
-				//- Superiores == oeste
-				ul.lab-group.north.west
-					li.lab#8b
-					li.lab#8a
-					li.lab#7.double
+				//- Ala oeste
+				.west
+					.north
+						.lab#8b
+						.lab#8a
+						.lab.double#7
+					.south
+						.lab#9
+						.lab#10
+						.lab#11
+						.lab#12
 
-				//- Superiores == este
-				ul.lab-group.north.east
-					li.lab#6b
-					li.lab#6a
-					li.lab#5b
-					li.lab#5a
+				//- Ala este
+				.east
+					.north
+						.lab#6b
+						.lab#6a
+						.lab#5b
+						.lab#5a
+					.south
+						.lab#1
+						.lab#2
+						.lab#3
+						.lab#4
 
-				//- Centrales
-				ul.lab-group.center
-					li.lab#14
-					li.lab#15
-					li.lab#16
+				.middle
+					.lab#14
+					.lab#15
+					.lab#16
 
-				//- Inferiores == oeste
-				ul.lab-group.south.west
-					li.lab#9
-					li.lab#10
-					li.lab#11
-					li.lab#12
 
-				//- Inferiores == este
-				ul.lab-group.south.east
-					li.lab#1
-					li.lab#2
-					li.lab#3
-					li.lab#4
-
-			footer
-				hr
-				p ¿Ya estas en un laboratorio? Tambien puede interesarte mi&nbsp;
-					a(href='https://github.com/ManuelBlanc/eps-dotfiles') configuración
-					|  para los laboratorios.
-
-		//- Github ribbon
-		//-a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io')
-		//-	img(src='img/github_ribbon.png' alt='Fork me on GitHub')
+		//- Footer
+		footer
+			//- Github ribbon
+			a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io' title="Fork me on GitHub")
+			hr
+			p Creado con <span class='heart'></span> por&nbsp;
+				a(href='http://github.com/ManuelBlanc' target='_blank') Manuel Blanc.
+				small  ¡Gracias a todos los que me echaron un cable!
+				//-| Tambien puede interesante mi&nbsp;
+				//-a(href='https://github.com/ManuelBlanc/eps-dotfiles') configuracion
 
