--- a/style.less
+++ b/style.less
@@ -1,148 +1,95 @@
+@import (reference) "lib/bootstrap/less/utilities.less";
+@import (reference) "lib/bootstrap/less/variables.less";
+@import (reference) "lib/bootstrap/less/mixins.less";
 
 // Paleta de colores
 @norm-color: #555;
-@free-color: hsla(120, 50%, 27%, 1);
-@busy-color: hsla(0, 75%, 27%, 1);
-// #8E388E Morado // #ee7600 Naranja
+@free-color: hsla(120, 75%, 27%, 0.85);
+@busy-color: hsla(0, 100%, 27%, 0.85);
+@soon-color: hsla(30, 90%, 47%, 0.95);
+// #8E388E Morado
 
-
-// Normalizacion
-html {
-	background: none;
-	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 14px;
-
-	// Gradiente robado de http://hslpicker.com
-	-webkit-background-size: 150px 150px;
-	-moz-background-size: 150px 150px;
-	-o-background-size: 150px 150px;
-	background-size: 150px 150px;
-	@stripe0: rgba(0, 0, 0, 0.0);
-	@stripe1: rgba(0, 0, 0, 0.1);
-	background-image: -webkit-gradient(linear, 0% 0%, 100% 100%, color-stop(25%, rgba(0, 0, 0, 0.1)), color-stop(25%, rgba(0, 0, 0, 0)), color-stop(50%, rgba(0, 0, 0, 0)), color-stop(50%, rgba(0, 0, 0, 0.1)), color-stop(75%, rgba(0, 0, 0, 0.1)), color-stop(75%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0)));
-	background-image: -webkit-linear-gradient(top right, rgba(0, 0, 0, 0.1) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
-	background-image: -moz-linear-gradient(top right, rgba(0, 0, 0, 0.1) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
-	background-image: -o-linear-gradient(top right, rgba(0, 0, 0, 0.1) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
-	background-image: linear-gradient(top right, rgba(0, 0, 0, 0.1) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.1) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
-	background-color: #33333a;
+html, body {
+	height: 100%;
+	background-color: #999;
 }
-html, body{
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	min-height: 100%;
-	height: auto !important;
-	height:100%;
-	position: fixed;
-	overflow-x: scroll;
-	box-sizing: border-box;
+.container-fluid {
+	position: relative;
+	background-color: #afafaf;
+	padding-top: 3%;
+	padding-left: 5%;
+	padding-right: 5%;
+	box-shadow: 0 12px 50px -12px rgba(0,0,0,0.5);
 }
 
-// Titulo de la pagina
-h1 {
-	color: #111;
-	font-size: 3em;
-	font-family: Georgia;
-	text-align: center;
-	margin: 1em auto 0.5em;
-}
-
-// Envoltorio general para colocar el cuerpo
-.container {
-	// Geometria
-	min-height: 100%;
-	width: 70%;
-	left: 15%;
-	@media screen and (max-width: 600px) {
-		left: 0% !important;
-		width: 100% !important;
-	}
-
-	// Posicionamiento
-	position: absolute;
-	background: #aaa;
-	border-left: 2px solid black;
-	border-right: 2px solid black;
-
-	// Estilo
-	box-shadow: inset 0 0 10em #222;
+h2 {
+	margin-bottom: 1em;
 }
 
 // Contenedor del mapa
 .floorplan {
-	// Geometria
-	padding: 0;
-	padding-left: 10%;
-	padding-right: 10%;
-	margin: 0 auto;
-	position: relative;
+	.make-row();
+	padding-bottom: 3em;
 
-	text-align: center;
-
-	.lab-group {
-		// Geometria
-		background-color: black;
-		padding: 0.2em;
-		display: inline-block;
-		overflow: auto;
-
-		box-shadow: 5px 5px 5px #555;
-		border-radius: 10px;
-
-		&.center {
-			margin-left: auto;
-			margin-right: auto;
-			display: block;
-			width: 18em;
-		}
+	// Bloques de los lados
+	.west, .east {
+		.make-xs-column(12);
+		.make-sm-column(6);
+	}
+	// Un poquito de padding
+	.east { padding-left:  2em; }
+	.west { padding-right: 2em; }
+	.north, .south {
+		.make-row();
+	}
+	.north {
+		margin-bottom: 0.5em;
+	}
+	.south {
+		margin-bottom: 2em;
 	}
 
-	// Laboratorio
-	.lab {
-		// Geometria
-		position: relative;
-		float: left;
-		height: 6em;
-		width: 6em;
-		&.double { width: 12em; }
+	.middle {
+		.make-xs-column(12);
+		.lab { .make-xs-column-push(1.5); }
+		.make-sm-column(6);
+		.make-sm-column-offset(3);
+	}
 
-		// Color
+	.lab {
+		.make-xs-column(3);
+		&.double {
+			.make-xs-column(6);
+		}
+
+		// El fondo
 		color: #eee;
 		background: white;
 		background-color: @norm-color;
-		box-shadow: inset 0 0 3px black;
+		box-shadow: inset 0 0 2px black;
 
-		// Etc
-		list-style: none;
+		// Posicion y tamaño
+		height: 7em !important;
+		padding: 0;
 
 		// Redondeamos los bordes del primero y el ultimo
-		//margin-left: 3px;
-		&:first-child {
-			margin-left: 0;
-			border-top-left-radius: 8px;
-			border-bottom-left-radius: 8px;
-		}
-		&:last-child {
-			border-top-right-radius: 8px;
-			border-bottom-right-radius: 8px;
-		}
+		&:first-child { .border-left-radius(8px);  }
+		&:last-child  { .border-right-radius(8px); }
 
-		/*
-		&.free {
-			background-image: linear-gradient(lighten(@free-color, 10%), @free-color);
-		}
-		*/
-		&.busy {
-			background: linear-gradient(lighten(@busy-color, 10%), @busy-color);
-			//box-shadow: inset 0px 0px 20px darken(@busy-color, 15%) !important;
-		}
+		&.busy { #gradient.vertical(lighten(@busy-color, 10%), @busy-color); }
+		&.free { #gradient.vertical(@free-color, darken(@free-color, 4%)); }
+		&.soon { #gradient.vertical(@soon-color, darken(@soon-color, 5%)); }
 
 		.info {
+			text-align: center;
 			display: inline-block;
 			width: 100%;
 
 			font-size: 0.8em;
-			&.activity { font-size: 1.2em; height: 1.2em; }
+			&.activity {
+				font-size: 1.2em;
+				height: 1.2em;
+			}
 
 			text-shadow: none;
 			margin-top: 0.2em;
@@ -156,31 +103,61 @@ h1 {
 				vertical-align: center;
 			}
 		}
+
+
+	}
+
+}
+
+@keyframes heartbeat {
+	from { .scale(1.05); }
+	to   { .scale(1.00); }
+}
+@-webkit-keyframes heartbeat {
+	from { .scale(1.05); }
+	to   { .scale(1.00); }
+}
+
+footer {
+	text-align: center;
+	position: relative;
+	hr {
+		margin-top: 0;
+		width: 100%;
+		height: 12px;
+		border: 0;
+	}
+	p {
+		display: block;
+		margin: 0 auto;
+		padding: 0 0 20px 0;
+		span.heart {
+			display: inline-block;
+			color: darkred;
+			position: relative;
+			.animation(heartbeat 1s infinite);
+			&:before { content: "❤"; }
+		}
+	}
+	small {
+		display: block;
 	}
 }
 
 .ribbon {
-	position: fixed;
-	top: 0;
+	// Image
+	background: url('img/github_ribbon.png') no-repeat;
+	background-size: contain;
+	// Positioning & sizing
+	position: absolute;
+	top:  0;
 	left: 0;
-	border: 0;
-	opacity: 0.4;
-	transition: 0.5s opacity;
+	min-height: 98px;
+	min-width:  98px;
+	height: 7em;
+	width:  7em;
+	// Opacity
+	opacity: 0.6;
+	.transition(0.5s opacity);
 	&:hover { opacity: 1; }
-}
-
-footer {
-	hr {
-		border: none;
-		border-top: 1px solid black;
-		max-width: 90%;
-		box-sizing: content-box;
-		height: 0;
-	}
-	p, small {
-		text-align: center;
-		margin-bottom: 0;
-		padding: 0 4em;
-	}
-	min-height: 5em;
 }
