--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h2 {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  padding: 0 2em;
 }
 @media (min-width: 768px) {
   .floorplan .west,
@@ -48,12 +49,6 @@ h2 {
     float: left;
     width: 50%;
   }
-}
-.floorplan .east {
-  padding-left: 2em;
-}
-.floorplan .west {
-  padding-right: 2em;
 }
 .floorplan .north,
 .floorplan .south {
@@ -64,9 +59,10 @@ h2 {
   margin-bottom: 0.5em;
 }
 .floorplan .south {
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
 }
 .floorplan .middle {
+  padding: 0 2em;
   float: left;
   width: 100%;
   position: relative;
@@ -161,10 +157,10 @@ h2 {
 }
 @keyframes heartbeat {
   from {
-    -webkit-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-    transform: scale(1.05);
+    -webkit-transform: scale(10);
+    -ms-transform: scale(10);
+    -o-transform: scale(10);
+    transform: scale(10);
   }
   to {
     -webkit-transform: scale(1);
@@ -206,9 +202,9 @@ footer p span.heart {
   display: inline-block;
   color: darkred;
   position: relative;
-  -webkit-animation: heartbeat 1s infinite;
-  -o-animation: heartbeat 1s infinite;
-  animation: heartbeat 1s infinite;
+  -webkit-animation: heartbeat 1s ease-in 1s infinite;
+  -o-animation: heartbeat 1s ease-in 1s infinite;
+  animation: heartbeat 1s ease-in 1s infinite;
 }
 footer p span.heart:before {
   content: "❤";
