--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ h2 {
   margin-right: -15px;
 }
 .floorplan .north {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
 }
 .floorplan .south {
-  margin-bottom: 1.5em;
+  margin-bottom: 1.2em;
 }
 .floorplan .middle {
   padding: 0 2em;
@@ -95,7 +95,7 @@ h2 {
   background: white;
   background-color: #555555;
   box-shadow: inset 0 0 2px black;
-  height: 7em !important;
+  min-height: 7.5em !important;
   padding: 0;
 }
 .floorplan .lab.double {
@@ -157,10 +157,10 @@ h2 {
 }
 @keyframes heartbeat {
   from {
-    -webkit-transform: scale(10);
-    -ms-transform: scale(10);
-    -o-transform: scale(10);
-    transform: scale(10);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
   }
   to {
     -webkit-transform: scale(1);
@@ -171,10 +171,10 @@ h2 {
 }
 @-webkit-keyframes heartbeat {
   from {
-    -webkit-transform: scale(1.05);
-    -ms-transform: scale(1.05);
-    -o-transform: scale(1.05);
-    transform: scale(1.05);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
   }
   to {
     -webkit-transform: scale(1);
@@ -202,9 +202,9 @@ footer p span.heart {
   display: inline-block;
   color: darkred;
   position: relative;
-  -webkit-animation: heartbeat 1s ease-in 1s infinite;
-  -o-animation: heartbeat 1s ease-in 1s infinite;
-  animation: heartbeat 1s ease-in 1s infinite;
+  -webkit-animation: heartbeat 1s ease-out infinite;
+  -o-animation: heartbeat 1s ease-out infinite;
+  animation: heartbeat 1s ease-out infinite;
 }
 footer p span.heart:before {
   content: "❤";
@@ -222,6 +222,7 @@ footer small {
   min-width: 98px;
   height: 7em;
   width: 7em;
+  z-index: 999;
   opacity: 0.6;
   -webkit-transition: 0.5s opacity;
   -o-transition: 0.5s opacity;
