--- a/index.jade
+++ b/index.jade
@@ -31,7 +31,7 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 
 	body
 		.container-fluid
-			h2.text-center ¿Qué&nbsp;laboratorios estan&nbsp;libres?
+			h2.text-center ¿Qué&nbsp;<strong>laboratorio</strong> está&nbsp;<strong>libre</strong>?
 			.floorplan
 				//- Ala oeste
 				.west
