--- a/style.less
+++ b/style.less
@@ -65,16 +65,17 @@ h2 {
 		.colorize-lab-mixin(@bg) {
 			border-top:     1px solid lighten(@bg, 10%);
 			border-right:   1px solid lighten(@bg, 10%);
-			border-left:    2px solid  darken(@bg, 5%);
-			border-bottom:  2px solid  darken(@bg, 5%);
+			border-left:    1px solid  darken(@bg, 5%);
+			border-bottom:  1px solid  darken(@bg, 5%);
 			background: linear-gradient(lighten(@bg, 10%), @bg);
 
 			&:focus {
 				border-left:   1px solid lighten(@bg, 10%);
 				border-bottom: 1px solid lighten(@bg, 10%);
-				border-top:    2px solid  darken(@bg, 5%);
-				border-right:  2px solid  darken(@bg, 5%);
-				background: linear-gradient(darken(@bg, 5%), lighten(@bg, 5%));
+				border-top:    1px solid  darken(@bg, 5%);
+				border-right:  1px solid  darken(@bg, 5%);
+				background: linear-gradient(darken(@bg, 5%), lighten(@bg, 0%));
+				outline: 0; // Quita el re-borde azul
 			}
 		}
 		         .colorize-lab-mixin(#555);
@@ -103,9 +104,9 @@ h2 {
 				margin-top: 0;
 				font-size: 2em;
 				font-weight: 800;
-				color: fade(#000, 70%);
-				text-shadow: -1px 1px 0 fade(#ccc, 90%);
-				opacity: 0.5;
+				color: fade(#000, 80%);
+				text-shadow: -1px 1px 0 fade(#888, 30%);
+				opacity: 0.7;
 				vertical-align: center;
 			}
 		}
