Mas contraste en el texto, texto en el corazon

--- a/index.jade
+++ b/index.jade
@@ -69,7 +69,7 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 		//- Footer
 		footer
 			hr
-			p Creado con <span class='heart'></span> por&nbsp;
+			p Creado con <span class='heart'>cariño</span> por&nbsp;
 				a(href='http://github.com/ManuelBlanc' target='_blank') Manuel Blanc.
 				small  ¡Gracias a todos los que me echaron un cable!
 				//-| Tambien puede interesante mi&nbsp;
