Mejoras menores en varios aspectos

--- a/index.jade
+++ b/index.jade
@@ -63,8 +63,6 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 					.lab#15
 					.lab#16
 
-			//- Github ribbon
-			a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io' title="Fork me on GitHub")
 
 		//- Footer
 		footer
@@ -74,4 +72,7 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 				small  ¡Gracias a todos los que me echaron un cable!
 				//-| Tambien puede interesante mi&nbsp;
 				//-a(href='https://github.com/ManuelBlanc/eps-dotfiles') configuracion
+			//- Github ribbon
+			a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io' title="Fork me on GitHub")
+				| El codigo fuente esta disponible en GitHub.
 
